# Portfolio-Comparison-Dashboard

./: .gitignore  Procfile  README.md  notebook.ipynb  pyproject.toml  requirements.txt
data/processed/: returns.parquet
scr/: bootstrap.py  config.py  dash_app.py  data_cleaning.py  data_ingestion.py  data_validation.py  efficient_frontier.py  gemini_prompt.py  logger.py  main.py  optimization_methods.py  portfolio_making.py
tests/: test_data_cleaning.py  test_data_ingestion.py  test_data_validation.py
