[project]
name = "poortfolio-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "Namit R Krishna",email = "namit2211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "yfinance (>=1.1.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (==2.2.2)",
    "graphql-core (==3.2.3)",
    "streamlit (>=1.54.0,<2.0.0)",
    "dash[cloud] (>=4.0.0,<5.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)",
    "poetry-plugin-export (>=1.10.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "scr"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
